# Python_TelegramBot_Petlin

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bot/: admin.py  forms.py  models.py  serializers.py  views.py
bot/bot_logic/: main.py
bot/bot_logic/Settings/: config.py
bot/bot_logic/Settings/.envs/: .envdb
bot/bot_logic/app/handlers/: __init__.py  commands.py
bot/migrations/: 0001_initial.py  0002_alter_telegramuser_user_id.py  0002_remove_event_id_event_event_id.py  0002_rename_botstatistics_botstatistic.py  0003_event_public_event_tg_id.py  0003_remove_appointment_id_appointment_appo_id.py  0004_alter_appointment_event.py  0004_rename_tg_id_event_telegram_user.py  0005_remove_telegramuser_id_telegramuser_user_id.py
bot/static/css/: simple.css
bot/templates/bot/: appointments.html  auth.html
core/: settings.py  urls.py  wsgi.py
src/python_telegrambot_petlin/: main.py
src/python_telegrambot_petlin/app/handlers/: __init__.py  commands.py
src/python_telegrambot_petlin/tgbot_petlin/tgbot_admin/: admin.py  apps.py  models.py
src/python_telegrambot_petlin/tgbot_petlin/tgbot_petlin/: main.py  settings.py  urls.py
src/python_telegrambot_petlin/tgbot_petlin/tgbot_petlin/app/handlers/: __init__.py  commands.py
static/: script.js
templates/: auth.html  script.js
tgbot_petlin/: db.sqlite3  manage.py
tgbot_petlin/tgbot_admin/: admin.py
tgbot_petlin/tgbot_petlin/: asgi.py  wsgi.py
